data/derived/comb/progs/unify/prog4420.ml.out
Characters 183-195:
  List.combine (List.rev (padZero l1)) (List.rev (padZero l2)) in
                         ^^^^^^^^^^^^
Error: This expression has type int list -> int list * int list
       but an expression was expected of type 'a list
